--- a/assets/css/codemirror.css
+++ b/assets/css/codemirror.css
@@ -3,7 +3,8 @@
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
-  height: 300px;
+  height: 350px;
+  width: 450px;
   color: black;
 }
 
@@ -225,7 +226,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
   border-width: 0;
   background: transparent;
   font-family: inherit;
-  font-size: inherit;
+  font-size: 11px;
   margin: 0;
   white-space: pre;
   word-wrap: normal;
