--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* Általános stílusok */
+/* General */
 body {
   font-family: 'Roboto', Arial, sans-serif;
   margin: 0;
@@ -7,7 +7,7 @@ body {
   color: #333;
 }
 
-/* Navigációs menü */
+/* Navigation menu */
 header {
   position: sticky;
   top: 0;
@@ -61,19 +61,18 @@ main p {
   color: #555;
 }
 
-/* Konvertáló szekció */
+/* Converter */
 #converterSection {
-  display: grid; /* Grid alapú elrendezés */
-  grid-template-columns: 1fr auto 1fr; /* Input - Gombok - Output */
-  gap: 30px; /* Távolság az oszlopok között */
-  justify-items: center; /* Elemek középre igazítása */
-  align-items: center; /* Vertikális igazítás */
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  justify-items: center;
+  align-items: center;
   background: linear-gradient(to bottom, #ffffff, #f1f1f1);
   padding: 40px;
   border-radius: 15px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
   max-width: 1200px;
-  margin: 0 auto; /* Középre igazítás */
+  margin: 0 auto;
 }
 
 #inputSection textarea,
@@ -95,13 +94,13 @@ main p {
   overflow-y: auto;
 }
 
-/* Gombok középen */
+/* Buttons */
 .button-group {
-  grid-column: 2; /* Gombok az input és output közé kerülnek */
+  grid-column: 2;
   display: flex;
   justify-content: center;
-  gap: 20px; /* Távolság a gombok között */
-  margin: 0; /* Gombok vertikális középre helyezése */
+  gap: 20px;
+  margin: 0;
 }
 
 button {
@@ -125,7 +124,7 @@ button:active {
 }
 
 
-/* Lábléc */
+/* Footer */
 footer {
   text-align: center;
   padding: 20px;
@@ -151,3 +150,35 @@ footer .social-icons a {
 footer .social-icons a:hover {
   color: #ffcc00;
 }
+
+/* Simulation */
+#simulation {
+  width: 450px;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#bodies {
+  display: flex;
+  gap: 2px;
+  align-items: left;
+}
+
+#sliders {
+  margin-bottom: 20px;
+  margin-right: 70px;
+  margin-left: 20px;
+}
+
+div.sliders {
+  padding: 10px;
+}
+
+div.slider {
+  width: 200px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
